Fix display of scrollbars

--- a/book/chapter.css
+++ b/book/chapter.css
@@ -27,7 +27,7 @@ body {
   flex: 0 0 auto;
   font-size: 16px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0 20px 30px 40px;
   width: 350px;
 }
@@ -64,7 +64,7 @@ body {
 @media (max-width: 1190px) {
   .container {
     display: block;
-    overflow: scroll;
+    overflow: auto;
   }
   .table-of-contents {
     width: 100%;
